# lidar_camera_calibration

extract_edge_points/: CMakeLists.txt  extract_edge_points.kdev4  main.cpp  readme.txt
extract_edge_points/.kdev4/: extract_edge_points.kdev4
panorama_camera_calibration/: CMakeLists.txt  camera_calibration.kdev4  main.cpp  readme.txt
panorama_camera_calibration/.kdev4/: camera_calibration.kdev4
point_set_processing_onto_plane/: main.cpp  point_set_processing.kdev4  readme.txt
point_set_processing_onto_plane/.kdev4/: point_set_processing.kdev4
points_projection_onto_lines/: main.cpp  points_projection_onto_lines.kdev4  readme.txt
points_projection_onto_lines/.kdev4/: points_projection_onto_lines.kdev4
triangle_detection_and_vertic_extraction_in_image/: main.cpp  readme.txt  triangle_detection_and_vertic_extraction_in_image.kdev4
